--- a/css/style.css
+++ b/css/style.css
@@ -100,31 +100,31 @@ html{
 .flexContainer{
     display: flex;
     border: #333 solid 1px;
-    justify-content: space-around;
     flex-direction: column;
+    text-align: center;
     justify-content: space-around;
     
 }
-/* @media(min-width:40rem){
+@media(min-width:40rem){
     .flexContainer{
         flex-direction: row;
     }
-} */
+}
 .col{
-    margin: 1rem;
+    /* margin: 1rem; */
     padding: 1rem;
-    /* flex-grow: 1; */
-    /* margin: auto; */
-    /* width: 50%; */
+    /* margin: 0 auto; */
+    
 }
 .col50{
-    width: 50%
+    flex-basis: 50%;
+    /* flex: 0 1 30%; */
 }
 .col30{
-    width: 30%;
+    flex-basis: 30%;
 }
 .col70{
-    width: 50%;
+    flex-basis: 70%;
 }
 .col:nth-child(1) {
     background-color: lightblue;
@@ -132,8 +132,11 @@ html{
 .col:nth-child(2) {
     background-color: lightgreen;
   }
+.col:nth-child(3) {
+    background-color: lightcoral;
+  }
 .imgProject {
-    /* width: 100%; */
+    width: 100%;
 	height: auto;
 	max-width: 300px;
 }
