--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+    /* will try to make variables to easily change the color  or make a dark theme*/
     --main-bg-color: brown;
     --about-color:#0bb634;
   }
@@ -10,11 +11,9 @@ main{
     /* max-width: 1200px; */
 }
 
-/* -------------------Home Page ------------ */
+/* ------------------- Home Page ------------ */
 
 .sectionShow{
-    /* margin-left: -2rem;;
-    margin-right: -2rem; */
     padding: 2rem; 
     background: #333;
     color: whitesmoke;
@@ -28,7 +27,6 @@ main{
 }
 .showItem h3 {
     padding-top: 1rem;
-
 }
 .btnAbout{
     background: #0bb634;
@@ -37,7 +35,6 @@ main{
     padding-top: 3rem;
     background: #f4f4f4;
     text-align: center;
-    
 }
 .contentQuestions{
     max-width: 800px;
@@ -50,17 +47,6 @@ main{
     color:#111;
 
 }
-.contentQuestions .ans{
-    max-width: 500px;
-    background: #333;
-    color: white;
-    margin: 0 auto;
-    border-radius: 1rem;
-    /* margin-top:5rem;  */
-    margin-top: -80px;
-    position: relative;
-    bottom: -90px;
-}
 .sectionIntro li {
     padding:1rem;   
     font-size: 1.2rem;
@@ -68,13 +54,23 @@ main{
 .sectionIntro li:nth-child(even){
     color:#555;
 }
+.contentQuestions .ans{
+    max-width: 500px;
+    background: #333;
+    color: white;
+    margin: 0 auto;
+    border-radius: 1rem;
+    margin-top: -80px;
+    position: relative;
+    bottom: -90px;
+}
 .ansText{
     font-size: 2rem;
     /* text-align: center; */
     padding: 1rem;
     margin-top: 1rem;
 }
-
+/* -- */
 .sectionHome{
     padding-top: 110px;
     background: rgba(81,116,209, 0.5);
@@ -89,12 +85,10 @@ main{
 }
 .sectionHome h3{
     text-align: center;
-    /* font-size: 2rem; */
+    font-size: 1.3rem;
     padding: 1rem;
 }
 .sectionHome .contentHome {
-    /* padding: inherit;
-    padding: initial; */
     max-width: 800px;
     margin: 0 auto;
 
@@ -117,15 +111,15 @@ main{
 /* --------------------- About Page----------------- */
 
 .sectionAbout{
-    padding: 2rem 2rem;
+    padding: 1rem;
+    background: #eceef1;
+    text-align: center;
 }
 .sectionAbout h2{
     font-size: 2rem;
     padding:2rem;
-    text-align: center;
 }
 .sectionAbout h3{
-    text-align: center;
     /* font-size: 2rem; */
     padding: 1rem;
 }
@@ -135,7 +129,6 @@ main{
     flex-direction: column;
     text-align: center;
     justify-content: space-around;
-    
 }
 @media(min-width:900px){
     .flexContainer{
@@ -146,7 +139,6 @@ main{
     /* margin: 1rem; */
     padding: 1rem;
     /* margin: 0 auto; */
-    
 }
 .col50{
     align-items: center;
@@ -166,17 +158,19 @@ main{
     /* background-color: lightgreen; */
   }
 .col:nth-child(3) {
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
   }
 .textBox {
     font-size: 1.2rem;
     text-align:justify; 
-
 }
 .imgProject {
     width: 100%;
 	height: auto;
-	max-width: 300px;
+	max-width: 500px;
+}
+.technical{
+    padding-top:1rem; 
 }
 .technical ul {
     list-style: none;
@@ -188,11 +182,8 @@ main{
 
 /* -------------------Order Page---------- */
 .orderContent {
-    background: #eceef1;
-    
-}
-.orderContent {
-    padding: 5rem;
+    background: #eceef1; 
+    padding: 2rem;
 }
 .orderHeader {
     border: 1px solid black;
@@ -202,7 +193,7 @@ main{
     align-items:center;
 }
 .orderHeader .orderButton{
-    margin: 0;
+    margin: 1rem;
 }
 .block{
     display: block;
@@ -218,12 +209,10 @@ main{
     padding: 1rem 0;
 }
 .formOrder .orderButton {
- width: 100%;   
+    width: 100%;   
 
 }
 .formOrder > div{
-    /* width: 80%; */
-    /* flex-grow: 1; */
     padding: 1rem;
     text-align: left;
 }
@@ -236,7 +225,7 @@ main{
     justify-content: space-between;
 }
 
-/* =----------- */
+/* ----------- */
 .deliveryForm {
     /* height: 800px; */
     width: 100%;
@@ -245,7 +234,6 @@ main{
     border-radius: 5px;
     margin: 50px auto;
     padding: 40px;
-
 }
 .form-wrap {
     max-width: 800px;
@@ -254,14 +242,12 @@ main{
 .form-order{
     margin: 0 auto;
     list-style: none;
-
 }
 .deliveryForm legend {
     text-align: center;
     margin-bottom: 30px;
     font-size: 1.5rem;
 }
-
 .form-wrap li:not(:last-child){
     list-style: none;
     padding: 1rem;
@@ -275,12 +261,10 @@ main{
 .form-wrap li label,
 .form-wrap li p {
     padding: 8px 20px 8px 0px;
-
     flex: 2 1 120px;
     max-width: 300px;
     align-self: flex-start;
 }
-
 /* label + * =  select all * elements that are placed immediately after label element */
 .form-wrap > li > label + *,
 .form-wrap > li > p + *{
@@ -293,7 +277,6 @@ main{
     border-radius: 5px;
     border: none;
 }
-
 .form-wrap li button {
     margin: 25px auto 0px;
     padding: 8px 16px;
@@ -304,16 +287,13 @@ main{
     letter-spacing: .09em;
     border-radius: 2px;
 }
-
-
 /* --------- Contact Page -------- */
 .sectionContact{
     text-align: center;
     padding: 2rem;
 }
 .formSignUp{
-    background: #0bb634#a8b9e8;
-    background:rgba(81,116,209, 0.5)
+    background:rgba(81,116,209, 0.5);
     padding: 1rem;
     border-radius: 1rem;
     width: 100%;
